# django-eximport

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
django_eximport/: asgi.py  settings.py  urls.py  wsgi.py
pilotlog/management/commands/: import_json.py
pilotlog/migrations/: 0001_initial.py  0002_aircraft.py  0003_remove_aircraft_f_n_p_t_remove_aircraft_t_m_g_and_more.py  0004_airfield.py  0005_flight.py  0006_imagepic.py  0007_limitrules.py  0008_myquery.py  0009_myquerybuild_alter_airfield_options_and_more.py  0010_pilot.py  0011_qualification.py  0012_settingconfig.py  0013_alter_flight_p1_code_alter_flight_p2_code_and_more.py  0014_rename_p1_code_flight_p1_rename_p2_code_flight_p2_and_more.py
pilotlog/models/: __init__.py  _bases.py  aircraft.py  airfield.py  bases.py  flight.py  image_pic.py  limit_rules.py  my_query.py  my_query_build.py  pilot.py  pilot_log.py  qualification.py  setting_config.py
pilotlog/utils/: __init__.py  importer.py
